--- a/project1.html
+++ b/project1.html
@@ -1,26 +1,24 @@
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="style1.css">
-        <title>B.F.F
+        <link rel="stylesheet" href="project1.css">
+        <title>BEST. FRIENDS
         </title>
     </head>
     <body>
         <div class="container">
             <header>
-                <h1>This Page Is To Know About MY BFF's</h1><br>
+                <h1>This Page Is To Know About MY BEST FRIENDS's</h1><br>
             </header>
             <aside>
                 <h2>Dialy Routine Of My Friends</h2>
                 <br>
                 <ul>
                     <li>Wake up early in the morning.</li>
-                    <li>Gym/Workout</li>
                     <li>Fresh UP</li>
-                    <li>Helping Parents In House Works</li>
                     <li>Break Fast</li>
-                    <li>Going to College and Listening to Classes</li>
-                    <li>Chilling in Break Times</li>
-                    <li>Playing Cricket If Possible</li>
+                    <li>Going to College </li>
+                    <li>Chilling with Friends</li>
+                    <li>Playing Cricket </li>
                     <li>Back To Home</li>
                     <li>Spending Time With Family</li>
                     <li>Helping Parents In House Works</li>
@@ -29,7 +27,7 @@
                 </ul>
             </aside>
             <main>
-                <img src="https://img.freepik.com/premium-photo/children-s-friendship-four-little-school-students-two-boys-two-girls-stand-embrace-schoolyard_109285-10327.jpg?" alt="FRIENDSHIP">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.PXniFc9zqKUF5VETxSCpFAHaE8&pid=Api&P=0&h=180" alt="FRIENDSHIP">
             </main>
             <footer>
                 <form>
@@ -46,30 +44,30 @@
                                 <th>Hobbie</th>
                             </tr>
                             <tr>
-                                <td>Yaswanth</td>
-                                <td>05-11-2002</td>
+                                <td>raju</td>
+                                <td>15-01-2003</td>
                                 <td>Cricket</td>
-                                <td>Chicken</td>
+                                <td>Chicken fry</td>
                                 <td>India</td>
-                                <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIdvzOgveSO0GtKu_ThQTKwjLkUOZqlVX5OQ&usqp=CAU" alt="Power Star"></td>
+                                <td>jr NTR</td>
                                 <td>Dancing</td>
                             </tr>
                             <tr>
-                                <td>Varsha</td>
-                                <td>20-01-2004</td>
+                                <td>rahim</td>
+                                <td>20-04-2004</td>
                                 <td>Badminton</td>
-                                <td>Dal and Pickle</td>
+                                <td>biryani</td>
                                 <td>India</td>
-                                <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_9GQIjJIRe9rneBLTEJgmPsgs3I448OETRg&usqp=CAU" alt="Super Start"></td>
+                                <td>ram charan</td>
                                 <td>Reading Navels</td>
                             </tr>
                             <tr>
-                                <td>Pooji</td>
-                                <td>16-11-2003</td>
-                                <td>Badminton</td>
-                                <td>Chapathi</td>
+                                <td>Prasanth</td>
+                                <td>23-11-2003</td>
+                                <td>chess</td>
+                                <td>pani puri</td>
                                 <td>India</td>
-                                <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7UNG4ELeyVAKuClOa5XJDSXs2DCa1hXlXqg&usqp=CAU" alt="Rebel Start"></td>
+                                <td>yash</td>
                                 <td>Watching Movies</td>
                             </tr>
                         </table>
