--- a/project1.html
+++ b/project1.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <header>
-                <h1>This Page Is To Know About MY BEST FRIENDS's</h1><br>
+                <h1>This Page Is To Know About MY BEST FRIENDS</h1><br>
             </header>
             <aside>
                 <h2>Dialy Routine Of My Friends</h2>
